Ansible/roles/app/files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-routed
  namespace: nginx-routed
  labels:
    app: nginx-routed
spec:
  selector:
    matchLabels:
      app: nginx-routed
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-routed
    spec:
      containers:
      - name: nginx-routed
        image: nginx:1.16.1
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
    name: nginx-service
    namespace: nginx-routed
spec:
    selector:
      app: ngninx-routed
    ports:
    - name: http
      protocol: TCP
      port: 80 # puerto en el que escucha el servicio
      targetPort: 80 # puerto en el que escucha el contenedor
