Ansible/roles/app/files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-routed
  annotations:
    haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: cvillar.unir.cp2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-service
            port:
              number: 80
